--- a/GuessTheWord-Starter/app/src/main/res/layout/game_fragment.xml
+++ b/GuessTheWord-Starter/app/src/main/res/layout/game_fragment.xml
@@ -18,6 +18,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="model"
+            type="com.example.android.guesstheword.screens.game.GameViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/game_layout"
         android:layout_width="match_parent"
@@ -51,6 +57,9 @@
             android:textColor="@color/black_text_color"
             android:textSize="34sp"
             android:textStyle="normal"
+            android:background="@color/colorPrimary"
+            android:paddingLeft="16dp"
+            android:paddingTop="16dp"
             app:layout_constraintBottom_toTopOf="@+id/score_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -132,6 +141,25 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline" />
+
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="CheckBox"
+            app:layout_constraintEnd_toEndOf="@+id/word_text"
+            app:layout_constraintStart_toStartOf="@+id/word_text"
+            app:layout_constraintTop_toBottomOf="@+id/word_text" />
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@={model.name}"
+            app:layout_constraintBottom_toTopOf="@+id/word_is_text"
+            app:layout_constraintEnd_toEndOf="@+id/word_text"
+            app:layout_constraintStart_toStartOf="@+id/word_text" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
